--- a/apache/vh.conf
+++ b/apache/vh.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
     ServerAdmin {{ admin }}
-    ServerName {{ domain }}
+    ServerName {{ server_name }}
 
     DocumentRoot {{ root_dir }}
 
